--- a/package.json
+++ b/package.json
@@ -8,8 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
+    "@taskboar/model": "^0.3.1",
     "next": "9.5.2",
+    "react-async-hook": "^3.6.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-beautiful-dnd": "^13.0.0",
+    "react-dom": "16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "uuid": "^8.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.27",
+    "@types/react": "^16.9.46",
+    "@types/react-beautiful-dnd": "^12.1.2",
+    "@types/react-redux": "^7.1.8",
+    "typescript": "^3.9.7"
   }
 }
