--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@material-ui/icons": "^4.9.1",
     "@taskboar/model": "^0.3.1",
     "next": "9.5.2",
-    "react-async-hook": "^3.6.1",
     "react": "16.13.1",
+    "react-async-hook": "^3.6.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "16.13.1",
     "react-redux": "^7.2.0",
@@ -26,6 +26,7 @@
     "@types/react": "^16.9.46",
     "@types/react-beautiful-dnd": "^12.1.2",
     "@types/react-redux": "^7.1.8",
+    "@types/uuid": "^8.3.0",
     "typescript": "^3.9.7"
   }
 }
