--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
-    "@taskboar/model": "^0.3.1",
     "next": "9.5.2",
+    "normalized-reducer": "^0.5.1",
     "react": "16.13.1",
     "react-async-hook": "^3.6.1",
     "react-beautiful-dnd": "^13.0.0",
