--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
+    "@svgr/webpack": "^5.4.0",
     "next": "9.5.2",
     "normalized-reducer": "^0.5.1",
     "react": "16.13.1",
