--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
     "@svgr/webpack": "^5.4.0",
+    "@types/react-redux": "^7.1.9",
     "next": "9.5.2",
     "normalized-reducer": "^0.5.1",
     "react": "16.13.1",
@@ -20,13 +21,13 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.46",
     "@types/react-beautiful-dnd": "^12.1.2",
-    "@types/react-redux": "^7.1.8",
     "@types/uuid": "^8.3.0",
     "typescript": "^3.9.7"
   }
